--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -28,10 +28,11 @@ jobs:
             uname -a
             echo ::set-output name=uname::$(uname -a)
             pacman -Sy
-            pacman -S python python-pip docker docker-buildx git glibc wget --needed --noconfirm
+            #pacman -S python python-pip docker docker-buildx git glibc wget --needed --noconfirm
+            pacman -S python python-pip git glibc wget --needed --noconfirm
             rm /usr/lib/python3.12/EXTERNALLY-MANAGED
             echo "whoami=$(whoami)"
-            usermod -aG docker "$(whoami)"
+            #usermod -aG docker "$(whoami)"
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
             cd kupferbootstrap
             pip3 install -r requirements.txt
