--- a/kupferbootstrap.toml
+++ b/kupferbootstrap.toml
@@ -41,7 +41,7 @@ password = "1234"
 size_extra_mb = "+3000"
 
 [profiles.oneplus-fajita]
-device = "sdm845-oneplus-fajita"
+device = "oneplus-fajita"
 flavour = "posh"
 pkgs_include = [ "wget", " rsync", " nano", " tmux", " zsh", " pv",]
 hostname = "fajita"
