--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -29,7 +29,7 @@ jobs:
             echo ::set-output name=uname::$(uname -a)
             pacman -Sy
             #pacman -S python python-pip docker docker-buildx git glibc wget --needed --noconfirm
-            pacman -S python python-pip git glibc make wget --needed --noconfirm
+            pacman -S python python-pip git glibc wget --needed --noconfirm
             rm /usr/lib/python3.12/EXTERNALLY-MANAGED
             echo "whoami=$(whoami)"
             #usermod -aG docker "$(whoami)"
@@ -39,6 +39,8 @@ jobs:
             ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
             kupferbootstrap --help
             pwd
+            useradd -m -G wheel -s /bin/bash user
+            su user
             wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
             kupferbootstrap config init -N
             kupferbootstrap config profile init
