--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -27,10 +27,12 @@ jobs:
           run: |
             uname -a
             echo ::set-output name=uname::$(uname -a)
-            pacman -Sy
+            useradd -m -G wheel -s /bin/bash user
+            su user
+            sudo pacman -Sy
             #pacman -S python python-pip docker docker-buildx git glibc wget --needed --noconfirm
-            pacman -S python python-pip git glibc wget --needed --noconfirm
-            rm /usr/lib/python3.12/EXTERNALLY-MANAGED
+            sudo pacman -S python python-pip git glibc wget --needed --noconfirm
+            sudo rm /usr/lib/python3.12/EXTERNALLY-MANAGED
             echo "whoami=$(whoami)"
             #usermod -aG docker "$(whoami)"
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
@@ -39,8 +41,6 @@ jobs:
             ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
             kupferbootstrap --help
             pwd
-            useradd -m -G wheel -s /bin/bash user
-            su user
             wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
             kupferbootstrap config init -N
             kupferbootstrap config profile init
