--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -43,14 +43,14 @@ jobs:
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
             cd kupferbootstrap
             pip3 install -r requirements.txt
-            sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
-            kupferbootstrap --help
+            #sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
+            $(pwd)/bin/kupferbootstrap --help
             pwd
             wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
-            kupferbootstrap config init -N
-            kupferbootstrap config profile init
+            $(pwd)/bin/kupferbootstrap config init -N
+            $(pwd)/bin/kupferbootstrap config profile init
             cp -r ./kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
-            kupferbootstrap image build oneplus-fajita
+            $(pwd)/bin/kupferbootstrap image build oneplus-fajita
 
         - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
