--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -15,11 +15,17 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
+
     steps:
-        - uses: sandervocke/setup-qemu-container@v1
+        - name: Checkout
+          uses: actions/checkout@v2
+         
+        - name: setup-qemu-container     
+          uses: sandervocke/setup-qemu-container@v1
           with:
-            container: archlinux
-            arch: amd64
+             container: archlinux
+             arch: amd64
 
 
         - name: Print architecture from within container
@@ -31,24 +37,24 @@ jobs:
             #pacman -S python python-pip docker docker-buildx git glibc wget --needed --noconfirm
             pacman -S python python-pip git glibc wget sudo --needed --noconfirm
             sudo rm /usr/lib/python3.12/EXTERNALLY-MANAGED
-            useradd -m -G wheel -s /bin/bash dennis
-            su - dennis
+            #useradd -m -G wheel -s /bin/bash dennis
+          
             echo "whoami=$(whoami)"
-            cd /home/dennis
+            #cd /home/dennis
             pwd
-            echo "whoami=$(whoami)"
+            #echo "whoami=$(whoami)"
             #usermod -aG docker "$(whoami)"
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
             cd kupferbootstrap
             pip3 install -r requirements.txt
-            #sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
-            bin/kupferbootstrap --help
+            sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
+            kupferbootstrap --help
             pwd
             wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
-            bin/kupferbootstrap config init -N
-            bin/kupferbootstrap config profile init
-            cp -r ./kupferbootstrap.toml /home/dennis/.config/kupfer/kupferbootstrap.toml
-            bin/kupferbootstrap image build oneplus-fajita
+            kupferbootstrap config init -N
+            kupferbootstrap config profile init
+            cp -r ./kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
+            kupferbootstrap image build oneplus-fajita
 
         - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
