--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -15,6 +15,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: /home/runner/
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
