--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -25,7 +25,7 @@ jobs:
     needs: configure
     runs-on: ubuntu-latest
     container:
-      image: mcr.microsoft.com/vscode/devcontainers/base:archlinux
+      image: mcr.microsoft.com/vscode/devcontainers/base:ubuntu
       options: --user ${{ needs.configure.outputs.uid_gid }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2       
