--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -36,7 +36,7 @@ jobs:
           sudo usermod -aG docker "$(whoami)"
           git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
           cd kupferbootstrap
-          pip3 install -r requirements.txt --break-system-packages
+          pip3 install -r requirements.txt 
           kupferbootstrap config init -N
           kupferbootstrap config profile init oneplus-fajita
           wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
