--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Installation python3 docker.io git
         run: |
           sudo apt update
-          sudo apt install python3 docker git
+          sudo apt install python3 docker.io git
           sudo apt search gcc12
           sudo apt install wget gcc-12 gcc-12-aarch64-linux-gnu
           
