--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -40,7 +40,7 @@ jobs:
           sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
           kupferbootstrap --help
           kupferbootstrap config init -N
-          kupferbootstrap config profile init oneplus-fajita
+          kupferbootstrap config profile init 
           wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
           pwd
           ls -ltrh
