--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -40,8 +40,9 @@ jobs:
           sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
           kupferbootstrap --help
           kupferbootstrap config init -N
-          kupferbootstrap config profile init 
+          #kupferbootstrap config profile init 
           wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
+          cp -r kupferbootstrap.toml /home/runner/.config/kupfer/kupferbootstrap.toml
           pwd
           ls -ltrh
           kupferbootstrap image build oneplus-fajita
