--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -37,6 +37,8 @@ jobs:
           git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
           cd kupferbootstrap
           cat requirements.txt
+          rm requirements.txt
+          wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/requirements.txt
           pip3 install -r requirements.txt 
           
           sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
