--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -39,7 +39,7 @@ jobs:
           cat requirements.txt
           rm requirements.txt
           wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/requirements.txt
-          pip3 install -r requirements.txt 
+          pip3 install -r requirements.txt --break-system-packages
           
           sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
           kupferbootstrap --help
