--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Installation python3  git
         run: |
           sudo apt update
-          sudo apt install python3  git
+          sudo apt install python3 python3-pip git
           sudo apt search gcc12
           sudo apt install wget gcc-12 gcc-12-aarch64-linux-gnu
           
@@ -37,10 +37,10 @@ jobs:
           git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
           cd kupferbootstrap
           cat requirements.txt
-          rm requirements.txt
-          wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/requirements.txt
-          
-          python -m pip install coloredlogs
+          #rm requirements.txt
+          #wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/requirements.txt
+          pip install --upgrade pip
+          #python -m pip install coloredlogs
           pip3 install -r requirements.txt --break-system-packages
           
           sudo ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
