--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -54,7 +54,7 @@ jobs:
           cp -r kupferbootstrap.toml /home/runner/.config/kupfer/kupferbootstrap.toml
           pwd
           ls -ltrh
-          
+          sudo chmod 750 /home/dennis/
           kupferbootstrap image build oneplus-fajita
           pwd
           ls -ltrh
