--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -25,8 +25,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install python3 python3-pip git
-          sudo apt search gcc12
-          sudo apt install wget gcc-12 gcc-12-aarch64-linux-gnu make cmake pkg-config
+          sudo apt search makepkg
+          sudo apt install wget gcc-12 gcc-12-aarch64-linux-gnu make cmake pkg-config makepkg
           
           
           
