--- a/.github/workflows/5t.yml
+++ b/.github/workflows/5t.yml
@@ -39,7 +39,7 @@ jobs:
           
           sudo apt update
           sudo apt install git python3 python3-tomli
-          git clone https://gitlab.com/postmarketOS/pmbootstrap.git
+          git clone https://gitlab.postmarketos.org/postmarketOS/pmbootstrap.git
           cd pmbootstrap
           git checkout 2.3.x
           
