--- a/.github/workflows/build-mpv.yml
+++ b/.github/workflows/build-mpv.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Compile
         id: compile
         run: |
-          cp do-mpv.sh do-mpv.sh
+          sudo mkdir -p /media/ramdisk/mpv-build
+          sudo mkdir -p /home/pintcat/ubin
 
           export CROSS_COMPILE=aarch64-linux-gnu-
           export ARCH=arm64
