--- a/.github/workflows/build-mpv.yml
+++ b/.github/workflows/build-mpv.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           sudo mkdir -p /media/ramdisk/mpv-build
           sudo mkdir -p /home/pintcat/ubin
+          sudo apt update
+          sudo apt install -y meson
 
           export CROSS_COMPILE=aarch64-linux-gnu-
           export ARCH=arm64
