--- a/.github/workflows/build-mpv.yml
+++ b/.github/workflows/build-mpv.yml
@@ -42,14 +42,14 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: debian-linux
-          path: /workdir/*
+          path: /home/pintcat/ubin/*
 
       - name: Upload image to Release
         uses: ncipollo/release-action@main
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
-          tag: Linux_Kernel_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: /workdir/*
+          tag: mpv_aarch64_${{ env.COMPILE_STARTINGTIME }}
+          artifacts: /home/pintcat/ubin/*
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
