--- a/.github/workflows/build-mpv.yml
+++ b/.github/workflows/build-mpv.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Upload file
         uses: actions/upload-artifact@v3
         with:
-          name: debian-linux
+          name: mpv-aarch64
           path: /home/pintcat/ubin/*
 
       - name: Upload image to Release
