--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -26,7 +26,7 @@ jobs:
           sudo apt update
           sudo apt install python3 python3-pip git
           sudo apt search makepkg
-          sudo apt install wget gcc-12 gcc-12-aarch64-linux-gnu make cmake pkg-config makepkg
+          sudo apt install wget gcc-12  make cmake pkg-config makepkg
           
           
           
