--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -6,7 +6,7 @@ on:
       set_example:
         description: "example"
         required: true
-        default: "hkdm"
+        default: "phosh"
   
 env:
   TZ: Asia/Shanghai
@@ -30,7 +30,7 @@ jobs:
           ls -ltr
           # export GC_INITIAL_HEAP_SIZE=12G
           # export GC_MAXIMUM_HEAP_SIZE=30G
-          nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
           zip_path=$(readlink -f /nix/store/*android-fastboot-images-oneplus-fajita)
           echo "Zip path: $zip_path"
           echo "::set-output name=zip_path::$zip_path"
