--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -30,6 +30,7 @@ jobs:
           ls -ltr
           # export GC_INITIAL_HEAP_SIZE=12G
           # export GC_MAXIMUM_HEAP_SIZE=30G
+          export NIXPKGS_ALLOW_UNFREE=1
           sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
           zip_path=$(readlink -f /nix/store/*android-fastboot-images-oneplus-fajita)
           echo "Zip path: $zip_path"
