--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -56,6 +56,7 @@ jobs:
           pwd
           ls -ltrh
 
+          AutomatedResponse=y
           kupferbootstrap image build oneplus-fajita
           pwd
           ls -ltrh
