--- a/.github/workflows/download-fedora.yml
+++ b/.github/workflows/download-fedora.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Compile
         id: compile
         run: |
-          curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
+          #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
+          curl -LO "https://github.com/gmicroul/fedora-mobility-sdm845/actions/runs/15909310620/artifacts/3413167681"
           pwd
           ls -ltrh
           
