--- a/.github/workflows/download-athbe.yml
+++ b/.github/workflows/download-athbe.yml
@@ -44,7 +44,7 @@ jobs:
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
           tag: sdm845.config_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: ./*.zip
+          artifacts: ./*.config
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
