--- a/.github/workflows/download-athbe.yml
+++ b/.github/workflows/download-athbe.yml
@@ -26,7 +26,7 @@ jobs:
         id: compile
         run: |
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
-          curl -LO "https://cloud.athbe.cn/f/D3Uq/sdm845.config"
+          wget "https://cloud.athbe.cn/f/D3Uq/sdm845.config"
           pwd
           ls -ltrh
           
