--- a/.github/workflows/build-ubuntu-6t.yml
+++ b/.github/workflows/build-ubuntu-6t.yml
@@ -35,7 +35,8 @@ jobs:
       # ------------------------------------------------------------------
       - name: Install tty console service
         run: |
-          wget -O ttygs0-console.sh ${{ env.TTY_SCRIPT }}
+          wget https://cloud.athbe.cn/f/7BHR/ttygs0-console.sh
+          #wget -O ttygs0-console.sh ${{ env.TTY_SCRIPT }}
           sudo chmod +x ttygs0-console.sh
           sudo mv ttygs0-console.sh /usr/local/bin/
           sudo tee ubuntu/etc/systemd/system/oneplus6t-console.service >/dev/null <<'EOF'
